# ultimate-fastapi-tutorial

./: .gitignore
assignments/add-put-and-delete-endpoints/: pyproject.toml
part-06-jinja-templates/: pyproject.toml
part-06-jinja-templates/app/: main.py
part-06b-basic-deploy-linode/: pyproject.toml
part-07-database/: pyproject.toml
part-07-database/app/: main.py
part-08-structure-and-versioning/: pyproject.toml
part-08-structure-and-versioning/app/: main.py
part-09-async/: pyproject.toml
part-09-async/app/: main.py
part-10-jwt-auth/: README.md  pyproject.toml
part-10-jwt-auth/app/: main.py
part-11-dependency-injection/: pyproject.toml
part-12-react-frontend/backend/app/: main.py
part-14-send-email-in-background/backend/app/app/: backend_pre_start.py  main.py
